--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
-header{
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.cabeçalho {
     background-color: #424e61;
     color: #ffffff;
+    display: flex;
+    justify-content: space-around; 
+    padding: 10px 0;
+}
+
+.img-one {
+    width: 7%;
+}
+
+.lista-one {
+    display: inline-block;
+    margin : 30px 20px;
+    font-size: 25px
 }
